[package]
name = "freecell-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "IronCalc adapter, evaluation worker, style/geometry caches, and file I/O for FreeCell. GPUI-free: builds and tests headless in Linux CI (architecture.md §2, §5, §6)."

[dependencies]
freecell-core.workspace = true
ironcalc_base.workspace = true
# Phase 3 (Document I/O): `ironcalc` is the umbrella crate carrying the xlsx load/save API
# (`import::load_from_xlsx`, `export::save_xlsx_to_writer`, `error::XlsxError`); `thiserror`
# backs the typed `LoadError`/`SaveError`; `tempfile` provides the atomic temp-file+rename
# save.
ironcalc.workspace = true
thiserror.workspace = true
tempfile.workspace = true
# Phase 4 (eval worker seam, components/engine_worker.md): `arc-swap` holds the published
# `Publication` snapshot (publish-then-bump); `async-channel` carries `WorkerEvent`s to the
# UI (the type `smol::channel` re-exports; no async runtime in the headless engine);
# `parking_lot` fronts the shared `RwLock<SheetCaches>`; `tracing` logs apply/eval/publish
# timings at debug (the SP1 observables).
arc-swap.workspace = true
async-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true
# Phase 3 range clipboard (`components/clipboard.md`): the engine's `Clipboard` struct is not
# nameable outside ironcalc_base (its fields are `pub(crate)` and it is not re-exported), so the
# clipboard slot round-trips it through `serde_json` — `to_value` the (Serialize) payload on copy,
# then `ClipboardData::deserialize(&Value)` on internal paste (`serde` supplies the trait).
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Test-only: `worker::run` tests build an `.xlsx` on the fly (`merged_fixture`). The former
# production use (the deleted `open_fixups`/`open_repair` import workarounds) is gone now that
# the pinned IronCalc build handles theme/indexed/number-format import + optional `xfId` itself.
zip = "0.6"

[features]
# Exposes `DocumentClient::detached()` — a worker-less client for headless UI tests, so a
# `#[gpui::test]` composing a `WorkbookWindow` does not spawn a real OS thread under gpui's
# deterministic `TestScheduler` (which panics on cross-thread activity). Off by default so the
# no-op client can never be wired into a release build; `freecell-app`'s dev-dependencies enable
# it for the test build only.
test-support = []

[lints]
workspace = true
