[package]
name = "formualizer_bench"
version = "0.1.0"
edition = "2021"
description = "Formualizer 0.7 adapter (impl binding_common::SpreadsheetEngine) + benchmark crate for the FreeCell Phase 1 engine bake-off (Sub-project C)."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "formualizer_bench"
path = "src/lib.rs"

[dependencies]
binding_common = { path = "../common" }
datagen = { path = "../../shared/datagen" }
bench_util = { path = "../../shared/bench_util" }
serde_json = "1"

[dependencies.formualizer]
version = "0.7"
default-features = false
# Only the calc-engine layers are needed here (no file I/O in the perf phase).
features = ["eval", "parse", "workbook"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "scenarios"
path = "src/bin/scenarios.rs"

[[bench]]
name = "perf"
harness = false
