[package]
name = "sp1_async_interop"
version = "0.1.0"
edition = "2021"
description = "FreeCell Round-2 SP1 — non-blocking recompute & the engine↔render interop seam. Independent Cargo project; depends read-only by relative path on ../harness and ../../shared/*. Investigates IronCalc 0.7.1's evaluate() lifecycle / Send-ness / change-awareness, measures the evaluate() latency matrix, and builds + gates a headless non-blocking render-loop harness."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "sp1_async_interop"
path = "src/lib.rs"

# The evaluate() latency matrix runner (sizes × DAG shapes; p50/p99; force+assert).
[[bin]]
name = "latency_matrix"
path = "src/bin/latency_matrix.rs"

# The non-blocking render-loop harness + GATE runner (render-tick budget, coalescing,
# staleness window, snapshot cost).
[[bin]]
name = "nonblocking"
path = "src/bin/nonblocking.rs"

# SP1 follow-on probe: is a newly-scrolled cell readable during an in-flight eval?
# Measures the live-model scroll-service latency (~one eval), concurrent snapshot reads
# (+ snapshot build cost / extra RSS), and overscan headroom.
[[bin]]
name = "scroll_during_eval"
path = "src/bin/scroll_during_eval.rs"

[dependencies]
# Frozen, read-only shared harness (the IronCalc adapter + SpreadsheetEngine trait +
# scenarios + peak_rss). Same IronCalc 0.7.1 pin, so SP1 numbers stay comparable.
round2_harness = { path = "../harness" }
# Frozen shared crates (datagen for shape generation, bench_util for stats/gating).
datagen = { path = "../../shared/datagen" }
bench_util = { path = "../../shared/bench_util" }
# Direct IronCalc `Model` API probes not on the neutral trait (new_sheet, UserModel
# diff-list, to_bytes snapshot). Same 0.7 pin as the harness.
ironcalc_base = "0.7"
serde_json = "1"
anyhow = "1"
