[package]
name = "ci_rendering"
version = "0.1.0"
edition = "2021"
description = "FreeCell Round-3 C -- CI snapshot rendering. Independent Cargo project. MINIMAL at scaffolding: NO GPUI / GPU deps (building GPUI in-container is out of scope and is itself part of C's investigation). Authored for a macOS/human run (architecture §5, §7); GPUI + PNG-encoder + perceptual-diff deps are added during Phase C itself. Scaffolding stub only."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "ci_rendering"
path = "src/main.rs"

# Deliberately NO dependencies at scaffolding time.
# Phase C adds (on macOS): GPUI (git-pinned, per Phase-1 04-ui-poc), a PNG encoder, and a
# perceptual-diff crate. See README.md.
[dependencies]
